Updated DB config for Supabase

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Change these values to match your local Postgres
-spring.datasource.url=jdbc:postgresql://db.lsegcfsqmsqwpmcvgpxm.supabase.co:5432/postgres
+spring.datasource.url=jdbc:postgresql://db.yambkvvyrgyhcmsaunmr.supabase.co:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=Ankit8023
 spring.jpa.hibernate.ddl-auto=update
